--- a/index.html
+++ b/index.html
@@ -466,6 +466,10 @@
                             <span class="alert-meta-label">IOCs:</span>
                             <span class="alert-meta-value">${alert.iocs || 'N/A'}</span>
                         </div>
+                        <div class="alert-meta-item">
+                            <span class="alert-meta-label">Alert ID:</span>
+                            <span class="alert-meta-value">#${String(alert.id).padStart(4, '0')}</span>
+                        </div>
                     </div>
                 </div>
             `).join('');
